--- a/app/index.html
+++ b/app/index.html
@@ -9,8 +9,8 @@
 
     {{content-for "head"}}
 
-    <link integrity="" rel="stylesheet" href="{{rootURL}}assets/vendor.css">
-    <link integrity="" rel="stylesheet" href="{{rootURL}}assets/neo4j-app.css">
+    <link rel="stylesheet" href="{{rootURL}}assets/vendor.css">
+    <link rel="stylesheet" href="{{rootURL}}assets/neo4j-app.css">
 
     {{content-for "head-footer"}}
   </head>
