--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,7 @@
     {{content-for "head"}}
 
     <link rel="stylesheet" href="{{rootURL}}assets/vendor.css">
-    <link rel="stylesheet" href="{{rootURL}}assets/neo4j-app.css">
+    <link rel="stylesheet" href="{{rootURL}}assets/Graph9.css">
 
     {{content-for "head-footer"}}
   </head>
@@ -18,7 +18,7 @@
     {{content-for "body"}}
 
     <script src="{{rootURL}}assets/vendor.js"></script>
-    <script src="{{rootURL}}assets/neo4j-app.js"></script>
+    <script src="{{rootURL}}assets/Graph9.js"></script>
 
     {{content-for "body-footer"}}
   </body>
